--- a/visual.css
+++ b/visual.css
@@ -1,11 +1,6 @@
-
-
-body {
-	background-color: white;
-	width: 100%;
-	height: 100%;
+body{
+	background-color: transparent;
 }
-
 .main_body {
 	height: 100%;
 }
